--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Memory Game</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Sora:wght@100..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div id="dbkqwb93239" class="card" data-icon="bootstrap">
+    <!-- <div id="dbkqwb93239" class="card" data-icon="bootstrap">
         <div class="card_front">
             <img class="icon" src="assets/bootstrap.png" alt="">
         </div>
         <div class="card_back">
             &lt/&gt
         </div>
+    </div> -->
+
+    <div id="gameOver">
+        <div>
+            Parabéns, você completou o jogo!
+        </div>
+
+        <button id="restart" onclick="restart()">Jogue novamente</button>
     </div>
 
     <script src="scripts/script.js"></script>
