--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <!-- <div id="dbkqwb93239" class="card" data-icon="bootstrap">
-        <div class="card_front">
-            <img class="icon" src="assets/bootstrap.png" alt="">
-        </div>
-        <div class="card_back">
-            &lt/&gt
-        </div>
-    </div> -->
+    <div id="gameBoard">
+        <!-- <div id="dbkqwb93239" class="card" data-icon="bootstrap">
+            <div class="card_front">
+                <img class="icon" src="assets/bootstrap.png" alt="">
+            </div>
+            <div class="card_back">
+                &lt/&gt
+            </div>
+        </div> -->
+    </div>
 
     <div id="gameOver">
         <div>
@@ -27,6 +29,7 @@
         <button id="restart" onclick="restart()">Jogue novamente</button>
     </div>
 
+    <script src="scripts/game.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
